@@ -25,7 +25,8 @@
 #include <stdio.h>
 #include <locale.h>
 #include <string.h>
-#include <signal.h>
+
+#include "network-light-gui.h"
 
 #define DESCRIPTION_DOC "xml/network-light-desc.xml"
 #define DIMMING_SERVICE "urn:schemas-upnp-org:service:Dimming:1"
@@ -35,15 +36,6 @@ static GUPnPContext     *context;
 static GUPnPRootDevice  *dev;
 static GUPnPServiceInfo *switch_power;
 static GUPnPServiceInfo *dimming;
-static GMainLoop        *main_loop;
-static gboolean          light_status;
-static guint8            light_load_level;
-
-static void
-interrupt_signal_handler (int signum)
-{
-        g_main_loop_quit (main_loop);
-}
 
 static void
 on_get_status (GUPnPService       *service,
@@ -53,7 +45,7 @@ on_get_status (GUPnPService       *service,
         gupnp_service_action_set (action,
                                   "ResultStatus",
                                   G_TYPE_BOOLEAN,
-                                  light_status,
+                                  get_status (),
                                   NULL);
 
         gupnp_service_action_return (action);
@@ -67,7 +59,7 @@ on_get_target (GUPnPService       *service,
         gupnp_service_action_set (action,
                                   "RetTargetValue",
                                   G_TYPE_BOOLEAN,
-                                  light_status,
+                                  get_status (),
                                   NULL);
 
         gupnp_service_action_return (action);
@@ -78,17 +70,21 @@ on_set_target (GUPnPService       *service,
                GUPnPServiceAction *action,
                gpointer            user_data)
 {
+        gboolean status;
+
         gupnp_service_action_get (action,
                                   "NewTargetValue",
                                   G_TYPE_BOOLEAN,
-                                  &light_status,
+                                  &status,
                                   NULL);
         gupnp_service_action_return (action);
+
+        set_status (status);
 
         gupnp_service_notify (service,
                               "Status",
                               G_TYPE_BOOLEAN,
-                              light_status,
+                              get_status (),
                               NULL);
 }
 
@@ -99,7 +95,7 @@ on_query_status (GUPnPService *service,
                  gpointer      user_data)
 {
         g_value_init (value, G_TYPE_BOOLEAN);
-        g_value_set_boolean (value, light_status);
+        g_value_set_boolean (value, get_status ());
 }
 
 static void
@@ -110,7 +106,7 @@ on_get_load_level_status (GUPnPService       *service,
         gupnp_service_action_set (action,
                                   "retLoadlevelStatus",
                                   G_TYPE_UINT,
-                                  light_load_level,
+                                  get_load_level (),
                                   NULL);
 
         gupnp_service_action_return (action);
@@ -124,7 +120,7 @@ on_get_load_level_target (GUPnPService       *service,
         gupnp_service_action_set (action,
                                   "retLoadlevelTarget",
                                   G_TYPE_UINT,
-                                  light_load_level,
+                                  get_load_level (),
                                   NULL);
 
         gupnp_service_action_return (action);
@@ -135,17 +131,22 @@ on_set_load_level_target (GUPnPService       *service,
                           GUPnPServiceAction *action,
                           gpointer            user_data)
 {
+        guint load_level;
+
         gupnp_service_action_get (action,
                                   "newLoadlevelTarget",
                                   G_TYPE_UINT,
-                                  &light_load_level,
+                                  &load_level,
                                   NULL);
         gupnp_service_action_return (action);
+
+        load_level = CLAMP (load_level, 0, 100);
+        set_load_level (load_level);
 
         gupnp_service_notify (service,
                               "LoadLevelStatus",
                               G_TYPE_UINT,
-                              light_load_level,
+                              load_level,
                               NULL);
 }
 
@@ -156,7 +157,7 @@ on_query_load_level (GUPnPService *service,
                      gpointer      user_data)
 {
         g_value_init (value, G_TYPE_UINT);
-        g_value_set_uint (value, light_load_level);
+        g_value_set_uint (value, get_load_level ());
 }
 
 static void
@@ -174,13 +175,13 @@ timeout (gpointer user_data)
         gupnp_service_notify (GUPNP_SERVICE (switch_power),
                               "Status",
                               G_TYPE_BOOLEAN,
-                              light_status,
+                              get_status (),
                               NULL);
 
         gupnp_service_notify (GUPNP_SERVICE (dimming),
                               "LoadLevelStatus",
                               G_TYPE_UINT,
-                              light_load_level,
+                              get_load_level (),
                               NULL);
 
         return FALSE;
@@ -191,6 +192,8 @@ init_upnp (void)
 {
         GError *error;
         xmlDoc *doc;
+
+        g_thread_init (NULL);
 
         error = NULL;
         context = gupnp_context_new (NULL, NULL, 0, &error);
@@ -304,30 +307,16 @@ deinit_upnp (void)
 int
 main (int argc, char **argv)
 {
-        struct sigaction sig_action;
-
-        g_thread_init (NULL);
-        g_type_init ();
-        setlocale (LC_ALL, "");
-
-        /* Light is off in the beginning */
-        light_status = FALSE;
-        light_load_level = 100;
-
-        if (!init_upnp ()) {
+        if (!init_ui (&argc, &argv)) {
                 return -1;
         }
 
-        main_loop = g_main_loop_new (NULL, FALSE);
+        if (!init_upnp ()) {
+                return -2;
+        }
 
-        /* Hook the handler for SIGTERM */
-        memset (&sig_action, 0, sizeof (sig_action));
-        sig_action.sa_handler = interrupt_signal_handler;
-        sigaction (SIGINT, &sig_action, NULL);
+        gtk_main ();
 
-        g_main_loop_run (main_loop);
-
-        g_main_loop_unref (main_loop);
         deinit_upnp ();
 
         return 0;
